web-infras/parser/tests/fixtures/babel/es2015/uncategorised/244/output.txt
[SyntaxError]: 'arguments' is not allowed in class field initializer or static initialization block (1,15)
1|"use strict"; arguments => 42
 |             ^
[SyntaxError]: unexpect keyword in strict mode (1,15)
1|"use strict"; arguments => 42
 |             ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,15)
1|"use strict"; arguments => 42
 |             ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,15)
1|"use strict"; arguments => 42
 |             ^
